--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img id="logo_header" src="./imagenes/logo_flargentina.jpg" height="60%" width="60%">
+            <h1 class="header_title">FlArgentina</h1>
         </div>
         <div>
            <nav id="navbar" class="nav">
