--- a/index.html
+++ b/index.html
@@ -5,47 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <h1 class="header_title">FlArgentina</h1>
-        </div>
-        <div>
-           <nav id="navbar" class="nav">
-        <ul class="header__menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="./paginas/quienessomos.html">Quienes Somos</a></li>
-            <li><a href="./paginas/eventos.html">Eventos</a></li>
-            <li><a href="./paginas/partidos.html">Partidos</a></li>
-            <li><a href="./paginas/galerias.html">Galeria</a></li>
-            <li><a href="./paginas/contacto.html">Contacto</a></li>
-        </ul>
-        </nav>  
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#"><h1>FlArgentina</h1></a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><p>Home</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/quienessomos.html"><p>Quienes somos</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/eventos.html"><p>Eventos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./paginas/partidos.html"><p>Partidos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./paginas/galerias.html"><p>Galeria</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html"><p>Contacto</p></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-    <main>
-        <div class="index1">
-            <div class="card1">
-                <a href="./paginas/partidos.html">
-                    <img src="./imagenes/vasco-flamengo-16032022-07.jpg">
-                </a>
-                <a href="./paginas/partidos.html">
-                    <h3 class="linkedtitle">MENGAO PARTIDO A PARTIDO</h3>
-                    <p class="linkedtitle">Asistí a los mejores momentos y goles del Mengao</p>
-                </a>
+    <main id="homepage">
+        <div id="carouselhome" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselhome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselhome" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
-            <div class="card1">
-                <a href="./paginas/eventos.html">
-                    <img src="./imagenes/final-carioca-2.jpg">    
-                </a>
-                <a href="./paginas/eventos.html">
-                    <h3 class="linkedtitle">MENGAO EN CÓRDOBA</h3>
-                    <p class="linkedtitle">Conocé más sobre nuestros próximos eventos y alentá con nosotros</p>
-                </a>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a href="./paginas/partidos.html">
+              <img src="./imagenes/home-1.jpg" class="d-block w-100" alt="...">
+              </a>
+                <div class="carousel-caption d-block hometext">
+              <a href="./paginas/partidos.html">
+                  <h5 id="hometitle1">MENGAO PARTIDO A PARTIDO</h5>
+                  <p id="homecaption1">Asistí a los mejores momentos y goles del Mengao</p>
+              </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+              <a href="./paginas/eventos.html">
+                    <img src="./imagenes/home-2.jpg" class="d-block w-100" alt="...">
+              </a>
+                <div class="carousel-caption d-block hometext">
+              <a href="./paginas/eventos.html">
+                  <h5 id="hometitle2">MENGAO EN CÓRDOBA</h5>
+                  <p id="homecaption2">Conocé más sobre nuestros próximos eventos y alentá con nosotros</p>
+              </a>
+                </div>
+              </div>
+              </div>
             </div>
-        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselhome" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselhome" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <div class="index2">
             <div class="card2">
                 <a href="./paginas/contacto.html">
@@ -81,7 +116,7 @@
         <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
         <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
     </ul>
-
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
