--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,35 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <h1 class="header_title">FlArgentina</h1>
-        </div>
-        <div>
-           <nav id="navbar" class="nav">
-        <ul class="header__menu">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./quienessomos.html">Quienes somos</a></li>
-            <li><a href="./eventos.html">Eventos</a></li>
-            <li><a href="./partidos.html">Partidos</a></li>
-            <li><a href="./galerias.html">Galeria</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#"><h1>FlArgentina</h1></a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./quienessomos.html"><p>Quienes somos</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./eventos.html"><p>Eventos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./partidos.html"><p>Partidos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><p>Contacto</p></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h3 class="pagetitle">Dejanos su mensaje/consulta y sus datos:</h3>
-        <form class="padding">
-            <label class="padding" for="fname">Nombre:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label class="padding" for="lname">Apellido:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <label class="padding" for="birthdate">Fecha de Nacimiento:</label>
-            <input type="date" id="birthdate" name="brithdate"><br><br>
-            <label class="padding" for="province">Provincia:</label>
-            <select id="province" name="province">
+        <form class="padding margin-left row g-3">
+            <div class="col-md-6">
+              <label class="form-label" for="fname">Nombre:</label>
+            <input type="text" class="form-control" id="fname" name="fname"><br><br>  
+            </div>
+            <div class="col-md-6">
+              <label class="form-label" for="lname">Apellido:</label>
+            <input type="text" class="form-control" id="lname" name="lname"><br><br>  
+            </div>
+            <div class="col-md-4">
+             <label class="form-label" for="birthdate">Fecha de Nacimiento:</label>
+            <input type="date" class="form-control" id="birthdate" name="brithdate"><br><br>   
+            </div>
+            <div class="col-md-4">
+                <label class="form-label" for="province">Provincia:</label>
+            <select id="province" class="form-control" name="province">
                 <option value="caba">CABA</option>
                 <option value="ba">Província de Buenos Aires</option>
                 <option value="catamarca">Catamarca</option>
@@ -60,23 +85,44 @@
                 <option value="tierradelfuego">Tierra del Fuego</option>
                 <option value="tucuman">Tucumán</option>
                 </select>
-                <br><br>
-            <label class="padding" for="city">Ciudad:</label>
-            <input type="text" id="city" name="city"><br><br>
-            <label class="padding" for="whatsapp">WhatsApp: </label>
-            <input type="tel" id="whatsapp" name="whatsapp"><br><br>
-            <label class="padding" for="relationship">Relación con Flamengo:</label><br>
-            <input type="radio" id="casual" name="relationship" value="Casual">
-            <label for="relationship">Casual</label><br>
-            <input type="radio" id="frequent" name="relationship" value="Frecuente">
-            <label for="relationship">Frecuente</label><br>
-            <input type="radio" id="always" name="relationship" value="Siempre">
-            <label for="relationship">Siempre</label><br>
-            <input type="radio" id="diehard" name="relationship" value="Enfermo">
-            <label for="relationship">Enfermo</label><br><br><br>
-            <label class="padding" for="message">Mensaje:</label>
-            <input type="text" id="message" name="message" style="height:120px; width:200px;"><br><br>
-            <input type="submit" id="submit" value="Enviar">   
+            </div>
+            <div class="col-md-4">
+            <label class="form-label" for="city">Ciudad:</label>
+            <input type="text" class="form-control" id="city" name="city">
+            </div>
+            <div class="col-md-4">
+            <label class="form-label" for="whatsapp">WhatsApp: </label>
+            <input type="tel" class="form-control" id="whatsapp" name="whatsapp">
+            </div>
+            <div class="col-md-8">
+            </div>
+            <div class="col-sm-10">
+                <label class="form-check-label" for="relationship">Relación con Flamengo:</label>
+               <div class="form-check">
+                    <input class="form-check-input" type="radio" id="casual" name="relationship" value="Casual">
+                    <label class="form-check-label"  for="relationship">Casual</label>
+               </div>
+               <div class="form-check">
+                    <input class="form-check-input" type="radio" id="frequent" name="relationship" value="Frecuente">
+                    <label class="form-check-label"  for="relationship">Frecuente</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="always" name="relationship" value="Siempre">
+                    <label class="form-check-label"  for="relationship">Siempre</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="diehard" name="relationship" value="Enfermo">
+                    <label class="form-check-label"  for="relationship">Enfermo</label>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <label class="form-label" for="message">Mensaje:</label>
+                <input type="text" lass="form-control" id="message" name="message" rows="3">
+            </div>
+            <div class="sm-12">
+                <input class="btn btn-danger mb-3" type="submit" id="submit" value="Enviar">
+            </div>
+               
         </form>
         <h5 style="text-decoration-color: black;" class="padding">O contactanos a través de los siguientes canales:</h5>
         <p class="padding-top"><strong>E-mail:</strong> <a href="mailto:flargentina@gmail.com">flargentina@gmail.com</a></p>
@@ -91,5 +137,6 @@
         <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
     </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
