--- a/paginas/partidos.html
+++ b/paginas/partidos.html
@@ -5,89 +5,151 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <h1 class="header_title">FlArgentina</h1>
-        </div>
-        <div>
-           <nav id="navbar" class="nav">
-        <ul class="header__menu">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./quienessomos.html">Quienes somos</a></li>
-            <li><a href="./eventos.html">Eventos</a></li>
-            <li><a href="#">Partidos</a></li>
-            <li><a href="./galerias.html">Galeria</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#"><h1>FlArgentina</h1></a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./quienessomos.html"><p>Quienes somos</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./eventos.html"><p>Eventos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><p>Partidos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html"><p>Contacto</p></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h1 class="pagetitle">Partidos de Flamengo</h1>
         <p class="padding">En esta página podés ver los mejores momentos de cada partido de nuestro querido Flamengo en la actual temporada.</p>
         <div class="margin-left margin-right">
             <h3>Últimos partidos de Flamengo</h3>
-            <div class="largepadding">
-                <h4 class="padding-top">Flamengo 1 x 0 Vasco - 20/03/2022</h4>
-                    <h6>Campeonato Carioca - Semifinal</h6>
-                    <p class="padding-top margin-bottom">Flamengo sigue sin jugar su mejor fútbol, pero hizo lo suficiente para imponer su mayor jerarquía sobre su gran rival y volvió a ganar por 1-0. De esta vez, el gol fue anotado por Willian Arao.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                        <div class="ytcontainer">
-                            <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-            </div>
-            <div class="largepadding">
-                <h4 class="padding-top">Vasco 0 x 1 Flamengo - 16/03/2022</h4>
-                    <h6>Campeonato Carioca - Semifinal</h6>
-                    <p class="padding-top margin-bottom">Flamengo no estuvo en un día muy inspirado, pero aún así logro superar a su gran rival por 1-0. El gol lo hizo Gabigol, de penal.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                    <div class="ytcontainer">
-                        <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-            </div>
-            <div class="largepadding">
-                <h4 class="padding-top">Bangu 0 x 6 Flamengo - 12/03/2022</h4>
-                    <h6>Campeonato Carioca - Fecha 11</h6>
-                    <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedila hicieron los goles.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                    <div class="ytcontainer">
-                        <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-            </div>
-            <div class="largepadding">
-                <h4 class="padding-top">Flamengo 2 x 1 Vasco - 06/03/2022</h4>
-                    <h6>Campeonato Carioca - Fecha 10</h6>
-                    <p class="padding-top margin-bottom">En un partido con muchos altibajos, Flamengo una vez más se utilizó de la mayor jerarquía de su plantel para superar a Vasco por 2-1. Filipe Luís y, ¿cuando no?, De Arrascaeta hicieron los goles del Mengao.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                    <div class="ytcontainer">
-                        <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-            </div>
-            <div class="largepadding">
-                <h4 class="padding-top">Flamengo 2 x 2 Resende - 27/02/2022</h4>
-                    <h6>Campeonato Carioca - Fecha 9</h6>
-                    <p class="padding-top margin-bottom">Flamengo estuvo irreconocible y por muy poco no salió de cancha derrotado ante un muy eficaz y bien plantado Resende, que llegó a estar ganando por dos goles. De Arrascaeta, que entró en el segundo tiempo, hizo nuestro primer gol y Gabigol, de penal, nos dio el empate al minuto 95.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                    <div class="ytcontainer">
-                        <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-            </div>
-            <div class="largepadding">
-                <h4 class="padding-top">Botafogo 1 x 3 Flamengo - 23/02/2022</h4>
-                    <h6>Campeonato Carioca - Fecha 8</h6>
-                    <p class="padding-top margin-bottom">Flamengo dio muestras de evolución y hizo valer su superioridad sobre Botafogo con un triunfo por 3-1. Pedro, Gabi y De Arrascaeta hicieron los goles del Más Querido.
-                    </p>
-                    <p><strong>Mejores momentos:</strong></p>
-                    <div class="ytcontainer">
-                        <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-            </div>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Flamengo 1 x 0 Vasco - 20/03/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">Flamengo sigue sin jugar su mejor fútbol, pero hizo lo suficiente para imponer su mayor jerarquía sobre su gran rival y volvió a ganar por 1-0. De esta vez, el gol fue anotado por Willian Arao.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                      <div class="ytcontainer">
+                                          <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                  </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      Vasco 0 x 1 Flamengo - 16/03/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">Flamengo no estuvo en un día muy inspirado, pero aún así logro superar a su gran rival por 1-0. El gol lo hizo Gabigol, de penal.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                  <div class="ytcontainer">
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Bangu 0 x 6 Flamengo - 12/03/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedila hicieron los goles.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                  <div class="ytcontainer">
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                      Flamengo 2 x 1 Vasco - 06/03/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">En un partido con muchos altibajos, Flamengo una vez más se utilizó de la mayor jerarquía de su plantel para superar a Vasco por 2-1. Filipe Luís y, ¿cuando no?, De Arrascaeta hicieron los goles del Mengao.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                  <div class="ytcontainer">
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                      Flamengo 2 x 2 Resende - 27/02/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">Flamengo estuvo irreconocible y por muy poco no salió de cancha derrotado ante un muy eficaz y bien plantado Resende, que llegó a estar ganando por dos goles. De Arrascaeta, que entró en el segundo tiempo, hizo nuestro primer gol y Gabigol, de penal, nos dio el empate al minuto 95.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                  <div class="ytcontainer">
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingSix">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                      Botafogo 1 x 3 Flamengo - 23/02/2022
+                    </button>
+                  </h2>
+                  <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                  <p class="padding-top margin-bottom">Flamengo dio muestras de evolución y hizo valer su superioridad sobre Botafogo con un triunfo por 3-1. Pedro, Gabi y De Arrascaeta hicieron los goles del Más Querido.
+                                  </p>
+                                  <p><strong>Mejores momentos:</strong></p>
+                                  <div class="ytcontainer">
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                  </div>
+                  </div>
+                </div>	
+              </div>
         </div>
     </main>
     <footer><p class="footer__socialmedia">Conocé nuestras redes sociales:
@@ -99,5 +161,6 @@
         <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
     </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
