--- a/paginas/quienessomos.html
+++ b/paginas/quienessomos.html
@@ -5,23 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <h1 class="header_title">FlArgentina</h1>
-        </div>
-        <div>
-           <nav id="navbar" class="nav">
-        <ul class="header__menu">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Quienes somos</a></li>
-            <li><a href="./eventos.html">Eventos</a></li>
-            <li><a href="./partidos.html">Partidos</a></li>
-            <li><a href="./galerias.html">Galeria</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#"><h1>FlArgentina</h1></a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><p>Quienes somos</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./eventos.html"><p>Eventos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./partidos.html"><p>Partidos</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
+                  </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html"><p>Contacto</p></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h1 class="pagetitle">Quienes somos</h3>
@@ -40,5 +58,6 @@
         <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
     </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
