--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header class="header">
@@ -50,7 +50,7 @@
                 <h4 class="padding-top">Final Campeonato Carioca - Ida - 30/03/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo miércoles por el partido de ida de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para acompañar este gran partido.</p>
                     <div class="evt__container">
-                    <img class="evt__img" src="../../imagenes/final-carioca-1.jpeg">
+                    <img class="evt__img" src="../imagenes/final-carioca-1.jpeg">
                     <div class="evt__imgcaption"><p>Flamengo se clasificó a la final del Campeonato Carioca</p></div>
                      </div>
                  <h5 class="padding-top">Donde asistir:</h5>
@@ -63,7 +63,7 @@
                 <h4 class="padding-top">Final Campeonato Carioca - Vuelta - 02/04/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo sábado por el partido de vuelta de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para asistir al Más Querido en la búsqueda de otra copa para la galería.</p>
                     <div class="evt__container">
-                    <img class="evt__img" src="../../imagenes/final-carioca-1.jpeg">
+                    <img class="evt__img" src="../imagenes/final-carioca-2.jpg">
                     <div class="evt__imgcaption"><p>Flamengo decidirá el Cariocao 2022 con Fluminense</p></div>
                      </div>
                  <h5 class="padding-top">Donde asistir:</h5>
@@ -76,7 +76,7 @@
                 <h4 class="padding-top">Talleres x Flamengo - Copa Libertadores - 04/05/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao estará de vuelta en suelo argentino para un partido de Copa Libertadores. El próximo 4 de mayo nos enfrentaremos con Talleres en el Estadio Mario Alberto Kempes, en Córdoba, por la cuarta fecha del Grupo H. Y nosotros estaremos junto al Más Querido en la cancha para alentar hasta el final.</p>
                     <div class="evt__container">
-                            <img class="evt__img" src="../../imagenes/gabigol-libertadores-2019-1.jpg">
+                            <img class="evt__img" src="../imagenes/gabigol-libertadores-2019-1.jpg">
                             <div class="evt__imgcaption"><p>Gabigol lidera el Mengao en el camnino rumbo a la Gloria Eterna</p></div>
                       </div>
                     <h5 class="padding-top">Información:</h3>
