Adding Sass pt 1

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header class="header">
@@ -128,15 +129,20 @@
         <p class="padding-top"><strong>E-mail:</strong> <a href="mailto:flargentina@gmail.com">flargentina@gmail.com</a></p>
         <p class="padding-top"><strong>WhatsApp:</strong> +54 9 11 XXXX-XXXX</p>
     </main>
-    <footer><p class="footer__socialmedia">Conocé nuestras redes sociales:
-    </p>
-    <ul class="footer__list">
-        <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
-        <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-        <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
+    <div class="container-fluid mt-auto pt-1">
+      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
     </ul>
+    <div class="col-md-4 d-flex justify-content-end align-items-center">
+      <span class="text-muted">&copy; 2022 FlArgentina</span>
+    </div>
     </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
