--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header class="header">
@@ -41,7 +42,7 @@
             </div>
           </nav>
     </header>
-    <main id="homepage">
+    <main id="homepage main">
         <div id="carouselhome" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselhome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -50,7 +51,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="./paginas/partidos.html">
-              <img src="./imagenes/home-1.jpg" class="d-block w-100" alt="...">
+              <img src="./imagenes/home_1.jpg" class="d-block w-100" alt="...">
               </a>
                 <div class="carousel-caption d-block hometext">
               <a href="./paginas/partidos.html">
@@ -61,7 +62,7 @@
               </div>
               <div class="carousel-item">
               <a href="./paginas/eventos.html">
-                    <img src="./imagenes/home-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./imagenes/home_2.jpg" class="d-block w-100" alt="...">
               </a>
                 <div class="carousel-caption d-block hometext">
               <a href="./paginas/eventos.html">
@@ -108,15 +109,20 @@
             </div>
         </div>
     </main>
-    <footer class="pagefooter">
-        <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
-    <ul class="footer__list">
-        <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
-        <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-        <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
+    <div class="container-fluid mt-auto pt-1">
+      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
     </ul>
-</footer>
+    <div class="col-md-4 d-flex justify-content-end align-items-center">
+      <span class="text-muted">&copy; 2022 FlArgentina</span>
+    </div>
+    </footer>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
