--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,11 +1,13 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="En FlArgentina siempre hay lugar para más gente. Dejá tus datos y contactate con nuestro grupo de hinchas de Flamengo en Argentina">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - Contactate con nosotros</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -98,27 +100,27 @@
             <div class="col-md-8">
             </div>
             <div class="col-sm-10">
-                <label class="form-check-label" for="relationship">Relación con Flamengo:</label>
+                <label class="form-check-label">Relación con Flamengo:</label>
                <div class="form-check">
                     <input class="form-check-input" type="radio" id="casual" name="relationship" value="Casual">
-                    <label class="form-check-label"  for="relationship">Casual</label>
+                    <label class="form-check-label"  for="casual">Casual</label>
                </div>
                <div class="form-check">
                     <input class="form-check-input" type="radio" id="frequent" name="relationship" value="Frecuente">
-                    <label class="form-check-label"  for="relationship">Frecuente</label>
+                    <label class="form-check-label"  for="frequent">Frecuente</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" id="always" name="relationship" value="Siempre">
-                    <label class="form-check-label"  for="relationship">Siempre</label>
+                    <label class="form-check-label"  for="always">Siempre</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" id="diehard" name="relationship" value="Enfermo">
-                    <label class="form-check-label"  for="relationship">Enfermo</label>
+                    <label class="form-check-label"  for="diehard">Enfermo</label>
                 </div>
             </div>
             <div class="col-md-8">
                 <label class="form-label" for="message">Mensaje:</label>
-                <input type="text" lass="form-control" id="message" name="message" rows="3">
+                <input type="text" class="form-control" id="message" name="message">
             </div>
             <div class="sm-12">
                 <input class="btn btn-danger mb-3" type="submit" id="submit" value="Enviar">
@@ -130,7 +132,7 @@
         <p class="padding-top"><strong>WhatsApp:</strong> +54 9 11 XXXX-XXXX</p>
     </main>
     <div class="container-fluid mt-auto pt-1">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
