--- a/paginas/galerias.html
+++ b/paginas/galerias.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="El Mengao nos deja sin palabras, pero una imagen vale más que mil palabras. Acá podés ver las mejores fotos de los partidos de Flamengo y de los eventos de su grupo de hinchas en Argentina">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - Las mejores fotos del Mengao</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -44,28 +46,28 @@
     </header>
     <main>
         <h1 class="pagetitle">Galeria</h1>
-        <p class="padding">Las mejores fotos de los partidos del Mengao y de nuestros eventos</p>
+        <p class="padding">Flamengo en el corazón y en cada click. Las mejores fotos de los partidos del Mengao y de nuestros eventos</p>
         <div class="gallery">
-            <img src="../imagenes/flamengo_vasco-20032022-00.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-01.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-04.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-05.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-06.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-07.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-08.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-01.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-02.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-03.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-04.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-05.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-06.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-07.jpg">
-            <img src="../imagenes/vasco-flamengo-16032022-08.jpg">
-            <img src="../imagenes/flamengo_vasco-20032022-02.jpg">
+            <img src="../imagenes/flamengo_vasco-20032022-00.jpg" alt="Flamengo reunido antes del partido con Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-01.jpg" alt="Gabigol festeja gol de penal contra Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-02.jpg" alt="Hinchada de Flamengo festeja en el Maracaná">
+            <img src="../imagenes/flamengo_vasco-20032022-04.jpg" alt="Willian Arao festeja su gol contra Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-05.jpg" alt="Willian Arao festeja su gol contra Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-06.jpg" alt="Willian Arao festeja con De Arrascaeta su gol contra Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-07.jpg" alt="Flamengo festeja triunfo ante Vasco">
+            <img src="../imagenes/flamengo_vasco-20032022-08.jpg" alt="Gabigol festeja triunfo ante Vasco">
+            <img src="../imagenes/vasco-flamengo-16032022-01.jpg" alt="Everton Ribeiro contra dos defensores rivales">
+            <img src="../imagenes/vasco-flamengo-16032022-02.jpg" alt="Gabigol festeja su gol ante Vasco">
+            <img src="../imagenes/vasco-flamengo-16032022-03.jpg" alt="Andreas Pereira se anticipa a su marca">
+            <img src="../imagenes/vasco-flamengo-16032022-04.jpg" alt="Gabigol entre dos defensores">
+            <img src="../imagenes/vasco-flamengo-16032022-05.jpg" alt="Andreas Pereira conduce el balón ante Vasco">
+            <img src="../imagenes/vasco-flamengo-16032022-06.jpg" alt="Paulo Sousa orienta al joven Lázaro">
+            <img src="../imagenes/vasco-flamengo-16032022-07.jpg" alt="Gabigol festeja para la hinchada">
+            <img src="../imagenes/vasco-flamengo-16032022-08.jpg" alt="Gabigol festeja su gol ante Vasco">
         </div>
     </main>
     <div class="container-fluid mt-auto pt-1">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
