--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Sitio web dedicado a los hinchas de Flamengo en Argentina. Acá sabés como alentar por el Mengao junto a nosotros y accedés a las mejores fotos y videos de los partidos y eventos.">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - Flamengo siempre bien representado en Argentina</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
@@ -42,7 +44,7 @@
             </div>
           </nav>
     </header>
-    <main id="homepage main">
+    <main id="main" class="homepage">
         <div id="carouselhome" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselhome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -51,7 +53,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="./paginas/partidos.html">
-              <img src="./imagenes/home_1.jpg" class="d-block w-100" alt="...">
+              <img src="./imagenes/home_1.jpg" class="d-block w-100" alt="Mengao partido a partido">
               </a>
                 <div class="carousel-caption d-block hometext">
               <a href="./paginas/partidos.html">
@@ -62,12 +64,12 @@
               </div>
               <div class="carousel-item">
               <a href="./paginas/eventos.html">
-                    <img src="./imagenes/home_2.jpg" class="d-block w-100" alt="...">
+                    <img src="./imagenes/home_2.jpg" class="d-block w-100" alt="Alenta por Flamengo">
               </a>
                 <div class="carousel-caption d-block hometext">
               <a href="./paginas/eventos.html">
-                  <h5 id="hometitle2">MENGAO EN CÓRDOBA</h5>
-                  <p id="homecaption2">Conocé más sobre nuestros próximos eventos y alentá con nosotros</p>
+                  <h5 id="hometitle2">ALENTÁ CON NOSOTROS</h5>
+                  <p id="homecaption2">Como hacerle el aguante a Flamengo en Argentina</p>
               </a>
                 </div>
               </div>
@@ -81,11 +83,10 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
         <div class="index2">
             <div class="card2">
                 <a href="./paginas/contacto.html">
-                    <img src="./imagenes/flamengo_vasco-20032022-00.jpg">
+                    <img src="./imagenes/flamengo_vasco-20032022-00.jpg" alt="Hacé click para contactarse con nosotros">
                 </a>
                 <a href="./paginas/contacto.html">
                     <h5 class="margin-left">¡Unite a nosotros! Dejanos tu contacto y comunicate para más info</h5>
@@ -93,7 +94,7 @@
             </div>
             <div class="card2">
                 <a href="./paginas/quienessomos.html">
-                    <img src="./imagenes/gabigol-libertadores-2019-1.jpg">
+                    <img src="./imagenes/gabigol-libertadores-2019-1.jpg" alt="Hacé click para conocer nuestra historia">
                 </a>
                 <a href="./paginas/quienessomos.html">
                     <h5 class="margin-left">Conocé un poco más sobre la história de nuestro grupo</h5>
@@ -101,7 +102,7 @@
             </div>
             <div class="card2">
                 <a href="./paginas/galerias.html">
-                    <img src="./imagenes/final-carioca-1.jpeg">
+                    <img src="./imagenes/final-carioca-1.jpeg" alt="Hacé click para saber todo sobre nuestros eventos">
                 </a>
                 <a href="./paginas/galerias.html">
                     <h5 class="margin-left">Las mejores fotos del Mengao y de nuestros eventos</h5>
@@ -110,13 +111,13 @@
         </div>
     </main>
     <div class="container-fluid mt-auto pt-1">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/FlArgentina" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com7FlArgentina" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/FlArgentina" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com/FlArgentina" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
     </ul>
     <div class="col-md-4 d-flex justify-content-end align-items-center">
       <span class="text-muted">&copy; 2022 FlArgentina</span>
