--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="FlArgentina también significa alentar juntos por Flamengo. En esta página, te enterás de todos los eventos realizado por nuestro grupo de hinchas de Flamengo en Argentina">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - Enterate de los eventos y alentá con nosotros</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -44,14 +46,14 @@
     </header>
     <main>
         <h1 class="pagetitle">Eventos</h1>
-        <p class="padding">Venite a alentar al Mengao con nosotros</p>
+        <p class="padding">La hinchada de Flamengo es la más grande, pero siempre hay lugar para más. Venite a alentar al Mengao con nosotros</p>
         <div>
             <h3 class="padding-top margin-bottom">Próximos eventos</h3>
             <div class="largepadding">
                 <h4 class="padding-top">Final Campeonato Carioca - Ida - 30/03/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo miércoles por el partido de ida de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para acompañar este gran partido.</p>
                     <div class="evt__container">
-                    <img class="evt__img" src="../imagenes/final-carioca-1.jpeg">
+                    <img class="evt__img" src="../imagenes/final-carioca-1.jpeg" alt="Flamengo se enfrentará con Fluminense">
                     <div class="evt__imgcaption"><p>Flamengo se clasificó a la final del Campeonato Carioca</p></div>
                      </div>
                  <h5 class="padding-top">Donde asistir:</h5>
@@ -64,7 +66,7 @@
                 <h4 class="padding-top">Final Campeonato Carioca - Vuelta - 02/04/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo sábado por el partido de vuelta de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para asistir al Más Querido en la búsqueda de otra copa para la galería.</p>
                     <div class="evt__container">
-                    <img class="evt__img" src="../imagenes/final-carioca-2.jpg">
+                    <img class="evt__img" src="../imagenes/final-carioca-2.jpg" alt="Flamengo volverá a enfrentarse con Fluminense en el partido decisivo del Cariocao">
                     <div class="evt__imgcaption"><p>Flamengo decidirá el Cariocao 2022 con Fluminense</p></div>
                      </div>
                  <h5 class="padding-top">Donde asistir:</h5>
@@ -77,16 +79,16 @@
                 <h4 class="padding-top">Talleres x Flamengo - Copa Libertadores - 04/05/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao estará de vuelta en suelo argentino para un partido de Copa Libertadores. El próximo 4 de mayo nos enfrentaremos con Talleres en el Estadio Mario Alberto Kempes, en Córdoba, por la cuarta fecha del Grupo H. Y nosotros estaremos junto al Más Querido en la cancha para alentar hasta el final.</p>
                     <div class="evt__container">
-                            <img class="evt__img" src="../imagenes/gabigol-libertadores-2019-1.jpg">
+                            <img class="evt__img" src="../imagenes/gabigol-libertadores-2019-1.jpg" alt="Gabigol y Flamengo van a Córdoba para medirse con Talleres">
                             <div class="evt__imgcaption"><p>Gabigol lidera el Mengao en el camnino rumbo a la Gloria Eterna</p></div>
                       </div>
-                    <h5 class="padding-top">Información:</h3>
+                    <h5 class="padding-top">Información:</h5>
                     <p class="padding-top"><i>Próximamente</i></p>
             </div>
         </div>
     </main>
     <div class="container-fluid mt-auto pt-1">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
