--- a/paginas/partidos.html
+++ b/paginas/partidos.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Los goles, las grandes jugadas... todo está disponible en FlArgentina. Asista a los mejores momentos de los últomos partidos de Flamengo">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - Las mejores jugadas de cada partido de Flamengo</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
-<body d-flex flex-column min-vh-100>
+<body class="d-flex flex-column min-vh-100">
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
@@ -44,7 +46,7 @@
     </header>
     <main>
         <h1 class="pagetitle">Partidos de Flamengo</h1>
-        <p class="padding">En esta página podés ver los mejores momentos de cada partido de nuestro querido Flamengo en la actual temporada.</p>
+        <p class="padding">Juega Flamengo y vos disfrutás de cada detalle. En esta página podés ver los mejores momentos de cada partido de nuestro querido Mengao en la actual temporada.</p>
         <div class="margin-left margin-right">
             <h3>Últimos partidos de Flamengo</h3>
             <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -60,7 +62,7 @@
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                       <div class="ytcontainer">
-                                          <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                          <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                   </div>
                   </div>
                   </div>
@@ -77,7 +79,7 @@
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                   <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                   </div>
                   </div>
@@ -90,11 +92,11 @@
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedila hicieron los goles.
+                  <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedil;a hicieron los goles.
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                   <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                   </div>
                   </div>
@@ -111,7 +113,7 @@
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                   <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                   </div>
                   </div>
@@ -128,7 +130,7 @@
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                   <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                   </div>
                   </div>
@@ -145,7 +147,7 @@
                                   </p>
                                   <p><strong>Mejores momentos:</strong></p>
                                   <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                   </div>
                   </div>
@@ -154,7 +156,7 @@
         </div>
     </main>
     <div class="container-fluid mt-5 pt-5">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
