--- a/paginas/quienessomos.html
+++ b/paginas/quienessomos.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Descubrí como empezó FlArgentina. En esta página, conocés todos los detalles de la trayectoria de nuestro grupo de hinchas de Flamengo en Argentina">
+    <meta name="keywords" content="Flamengo, Argentina, FlArgentina, Mengao, Mengo, hinchas, hinchada, futbol">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La casa de los fanáticos de Flamengo en Argentina</title>
+    <title>FlArgentina - La história de la casa de los fanáticos de Flamengo en Argentina</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -43,15 +45,15 @@
           </nav>
     </header>
     <main>
-        <h1 class="pagetitle">Quienes somos</h3>
+        <h1 class="pagetitle">Quienes somos</h1>
         <h3 class="padding-top">Nuestra historia</h3>
         <p class="padding">Somos un grupo de hinchas de Flamengo residentes en Buenos Aires que se conoció cuando nuestro Mengao vino al Nuevo Gasómetro para enfrentarse con San Lorenzo. El resultado de aquél partido no fue el que esperábamos, pero como legado quedo un grupo que empezó a agregar más residentes en Argentina y a los turistas brasileños de paso para asistir a los partidos. Juntos vivimos decepciones, como la derrota en la final de la Copa Sudamericana del mismo 2017, contra Independiente, pero también muchos momentos felices, como la conquista de la Copa Libertadores de 2019 y los campeonatos nacionales de 2019 y 2020.</p>
-        <p class="padding"><img class="quienessomos__img" src="../imagenes/final-carioca-1.jpeg"><br>Nuestro grupo en uno de los partidos de Flamengo en Buenos Aires</p>
+        <p class="padding"><img class="quienessomos__img" src="../imagenes/final-carioca-1.jpeg" alt="Grupo de hinchas de Flamengo en Argentina reunido"><br>Nuestro grupo en uno de los partidos de Flamengo en Buenos Aires</p>
         <h3 class="padding-top">Actualidad</h3>
         <p class="padding">Estuvimos inactivos en 2020 y 2021 en virtud de la pandemia del COVID-19, pero ahora estamos nuevamente activos, con eventos a cada partido de Flamengo. Podés encontrar más información sobre nuestras próximas juntadas en <a href="./eventos.html">nuestra página de eventos</a>.</p>
     </main>
     <div class="container-fluid mt-auto pt-1">
-      <p class="footer__socialmedia">Conocé nuestras redes sociales:</p>
+      <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
